--- a/public/personal.css
+++ b/public/personal.css
@@ -2,6 +2,17 @@
   text-transform: uppercase;
 }
 
+#photo {
+  display: block;
+  max-width: 200px;
+  max-height: 95px;
+  width: auto;
+  height: auto;
+  border-radius: 50%;
+  border: solid 3px black;
+  box-shadow: 0 0 3px transparent;
+}
+
 #personal {
   /* max-width: 25%; */
   padding: 1rem;
