--- a/public/main.css
+++ b/public/main.css
@@ -23,8 +23,8 @@ main {
 }
 
 footer {
+  font-size: 0.75rem;
   flex-shrink: 0;
-  border: 1px black solid;
   text-align: center;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
