--- a/public/main.css
+++ b/public/main.css
@@ -54,9 +54,6 @@ footer {
   padding-left: 1rem;
 }
 
-#history section {
-}
-
 #history .section-title {
   text-transform: uppercase;
   margin-top: 0.75rem;
@@ -69,7 +66,7 @@ footer {
   margin-left: 1rem;
 }
 
-#history ol li {
+.flexed {
   display: flex;
 }
 
@@ -95,8 +92,6 @@ footer {
 }
 
 .skills__container {
-  width: fit-content;
-  padding-left: rem;
 }
 .skills__wrapper {
   display: flex;
@@ -125,4 +120,27 @@ footer {
 .hobbies__item {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
+}
+.project-description {
+  font-weight: bold;
+  margin-bottom: 0;
+  margin-top: 0;
+  text-align: justify;
+}
+.project-duties {
+  margin-top: 0.3rem;
+  margin-bottom: 0;
+  text-align: justify;
+}
+.section-projects ol {
+  margin: 0 !important;
+}
+.section-projects li {
+  padding-left: 1rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.3rem;
+}
+.section-projects li:nth-child(2n+1) {
+  background-color: #eeeeee;
 }
